--- a/.github/workflows/build_paper.yml
+++ b/.github/workflows/build_paper.yml
@@ -1,32 +1,23 @@
-# This is a basic workflow to help you get started with Actions
+on: [push]
 
-name: CI
-
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [ master ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  paper:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    name: Paper Draft
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Open Journals PDF Generator
-      # You may pin to the exact commit or the version.
-      # uses: openjournals/openjournals-draft-action@a994a876f36e25076174d9ed133e01b1f1b9fcf3
-        uses: openjournals/openjournals-draft-action@v.1.0
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Build draft PDF
+        uses: openjournals/openjournals-draft-action@master
         with:
-          # Target journal, must be either "joss" or "jose"
-          journal: joss # optional, default is joss
-          # Path to the main paper Markdown file, relative to the project's root directory.
-          paper-path: ./paper/paper.md # optional, default is paper.md
+          journal: joss
+          # This should be the path to the paper within your repo.
+          paper-path: paper/paper.md
+      - name: Upload
+        uses: actions/upload-artifact@v1
+        with:
+          name: paper
+          # This is the output path where Pandoc will write the compiled
+          # PDF. Note, this should be the same directory as the input
+          # paper.md
+          path: paper/paper.pdf
