--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,14 @@
-﻿autograd==1.3
-cffi==1.14.2
-cryptography>=3.3.2
-numpy==1.22.0
-opencv-python-headless==4.5.3.56
-pandas==1.1.2
+﻿cffi==1.14.2
+cryptography>=42.0.4
+numpy==1.26.4
+opencv-python-headless==4.9.0.80
+pandas==2.2.0
 pycparser==2.20
-pykalman==0.9.5
-pyproj==2.6.1.post1
-PyQt5==5.15.1
-PyQt5-sip==12.8.1
-PyQt5-stubs==5.14.2.2
-pyqtgraph==0.11.0
-python-dateutil==2.8.1
+pykalman-py311-update==0.9.6
+pyproj==3.6.1
+PyQt5==5.15.10
+PyQt5-stubs
+pyqtgraph==0.13.7
+python-dateutil==2.9.0
 pytz==2020.1
-scipy==1.11.1
-six==1.15.0
+scipy==1.13.1
